# term_engine

./: Pipfile  README.md  bird.py  bird_drawing.py  game.py  hello_world.py  hud.py  pipe.py  pipe_drawing.py  pipe_spawner.py  pyproject.toml
engine/: _interface.py  core.py  engine_interface.py
engine/components/: _interfaces.py  collider.py  drawing.py  drawing_stack.py  object.py
engine/effects/: RepeatCallbacksEffect.py  RepeatEffect.py  SpawnEffect.py  _interfaces.py  audio_effect.py  repeat_callbacks_effect.py  repeat_effect.py
engine/metrics/: bounds.py  duration.py  vec2.py
engine/network/: client.py  constants.py  server.py  sock_stream.py
engine/panel/: Panel.py  _interfaces.py  frame_buffer.py
engine/systems/: AudioSystem.py  CollisionSystem.py  FrameTimeKeeper.py  RenderingSystem.py  RepeatEffectSystem.py  TypingSystem.py  _interfaces.py  collision_system.py  frame_time_keeper.py  garbage_collection_system.py  multiplayer_system.py  rendering_system.py
engine/utils/: typing.py
src/: _interface.py  core.py
src/components/: _interfaces.py  object.py
src/effects/: _interfaces.py
src/network/: a_socket.py  client.py  room.py
src/panel/: frame_buffer.py
src/systems/: _interfaces.py  collision_system.py  frame_time_keeper.py  rendering_system.py
src/term_engine/: _interface.py  core.py
src/term_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/term_engine/components/: _interfaces.py  drawing.py  object.py
src/term_engine/panel/: panel.py  (+2 more)
tests/: test1.py  testing4.py  testings.py  testings2.py  testings3.py
(+10 files in other folders)
